--- a/sigima/locale/fr/LC_MESSAGES/sigima.po
+++ b/sigima/locale/fr/LC_MESSAGES/sigima.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  sigima\n"
 "Report-Msgid-Bugs-To: p.raybaut@codra.fr\n"
-"POT-Creation-Date: 2025-08-08 11:28+0200\n"
+"POT-Creation-Date: 2025-08-09 15:59+0200\n"
 "PO-Revision-Date: 2025-05-22 15:46+0200\n"
 "Last-Translator: Christophe Debonnel <c.debonnel@codra.fr>\n"
 "Language: fr\n"
@@ -439,11 +439,11 @@ msgstr "Sortie en décibels (dB)"
 msgid "Constant value"
 msgstr "Constante"
 
-msgid "columns"
-msgstr "colonnes"
-
 msgid "rows"
 msgstr "lignes"
+
+msgid "columns"
+msgstr "colonnes"
 
 msgid "Distribute over"
 msgstr "Distribuer selon les"
@@ -702,6 +702,45 @@ msgstr "Écrêtage limite"
 
 msgid "Clipping limit (higher values give more contrast)."
 msgstr "Valeur d'écrêtage (plus la valeur est élevée, plus le contraste est important)."
+
+msgid "increasing"
+msgstr ""
+
+#, fuzzy
+msgid "decreasing"
+msgstr "Passage par zéro"
+
+msgid "X translation"
+msgstr ""
+
+msgid "Y translation"
+msgstr ""
+
+#, fuzzy
+msgid "column size"
+msgstr "Colonnes"
+
+#, fuzzy
+msgid "row size"
+msgstr "Taille"
+
+#, fuzzy
+msgid "ROI titles"
+msgstr "Titre de la ROI"
+
+msgid "Base name"
+msgstr ""
+
+msgid "Name pattern"
+msgstr ""
+
+#, fuzzy
+msgid "X direction"
+msgstr "Direction"
+
+#, fuzzy
+msgid "Y direction"
+msgstr "Direction"
 
 msgid "horizontal"
 msgstr "horizontal"
@@ -1128,3 +1167,4 @@ msgstr "Intensité"
 
 msgid "Centroid"
 msgstr "Barycentre"
+
