Refactor phase_angle, PhaseAngleParam to use AngleUnit

--- a/sigima/locale/fr/LC_MESSAGES/sigima.po
+++ b/sigima/locale/fr/LC_MESSAGES/sigima.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  sigima\n"
 "Report-Msgid-Bugs-To: p.raybaut@codra.fr\n"
-"POT-Creation-Date: 2025-08-13 11:14+0200\n"
+"POT-Creation-Date: 2025-08-13 17:02+0200\n"
 "PO-Revision-Date: 2025-05-22 15:46+0200\n"
 "Last-Translator: Christophe Debonnel <c.debonnel@codra.fr>\n"
 "Language: fr\n"
@@ -439,14 +439,11 @@ msgstr "Sortie en décibels (dB)"
 msgid "Constant value"
 msgstr "Constante"
 
-msgid "Radians"
-msgstr "Radians"
+msgid "Unwrapping removes discontinuities in phase"
+msgstr "Déplier supprime les discontinuités de phase"
 
-msgid "Degrees"
-msgstr "Degrés"
-
-msgid "Output angle unit"
-msgstr "Unité de l'angle en sortie"
+msgid "Unit of angle measurement"
+msgstr "Unité de mesure de l'angle"
 
 msgid "columns"
 msgstr "colonnes"
@@ -1081,9 +1078,6 @@ msgstr "Paramètre de forme de la fonction de fenêtrage gaussienne"
 
 msgid "Angle unit"
 msgstr "Unité de l'angle"
-
-msgid "Unit of angle measurement"
-msgstr "Unité de mesure de l'angle"
 
 msgid "Angle"
 msgstr "Angle"
